[package]
name = "AdventOfCode2019"
version = "0.1.0"
authors = ["Arthur Woimbée <arthur.woimbee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="int_machine"
path="src/lib/int_machine.rs"

[dependencies]
elapsed = "0.1.2"
