[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "3.0"
itertools = "0.10"
heapless = "0.7.9"
bitvec = "1.0.0"
hash32 = "0.2.1"
num = "0.4.0"
nalgebra = "0.31.0"
nom = "7.1"
