[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
env_logger = "0.11.5"
indoc = "2"
log = {version="0.4.22", features = ["release_max_level_info"]}
nom = "7"
